Fix content wrapping

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,7 +33,7 @@ img {
 }
 
 #content {
-    flex: 1 0 auto;
+    /* flex: 1 0 auto;*/
     padding-top: calc(100px + 5vh);
     justify-content: center;
 }
@@ -94,7 +94,7 @@ img {
 }
 
 .card {
-    margin: 22px 15px 23px 15px;
+    margin: 22px 15px 22px 15px;
     width: 150px;
     height: 250px;
     border-radius: 15px;
